[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py38']

[tool.darker]
isort = true

[tool.ruff]
select = ["E", "F", "B", "UP"]
target-version = "py38"
# Exceptions:
# B9 flake8-bugbear opinionated warnings
# E501 is line length (delegated to black)
ignore = ["B9", "E501"]
