[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py38']

[tool.darker]
isort = true

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "G", "ISC", "UP"]
# Exceptions:
# B9 flake8-bugbear opinionated warnings
# E501 is line length (delegated to black)
ignore = ["B9", "E501"]
