[bdist_wheel]
universal = 1

[flake8]
exclude =
    .eggs
    .git
    .tox
    .venv
    build
ignore = E501,E741,SFS3
import-order-style = smarkets
application-import-names = bioblend

[metadata]
author = Enis Afgan
author_email = afgane@gmail.com
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Scientific/Engineering :: Bio-Informatics
description = Galaxy and CloudMan API library
license = MIT
license_files =
    CITATION
    LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Nicola Soranzo
maintainer_email = nicola.soranzo@earlham.ac.uk
name = bioblend
project_urls =
    Bug Tracker = https://github.com/galaxyproject/bioblend/issues
    Documentation = https://bioblend.readthedocs.io/
    Source Code = https://github.com/galaxyproject/bioblend
url = https://bioblend.readthedocs.io/
version = attr: bioblend.__version__

[mypy]
ignore_missing_imports = True

[options]
install_requires =
    boto>=2.9.7
    pyyaml
    requests>=2.20.0
    requests-toolbelt>=0.5.1,!=0.9.0
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    bioblend-galaxy-tests = bioblend._tests.pytest_galaxy_test_wrapper:main [testing]

[options.extras_require]
testing =
    pytest

[options.package_data]
bioblend = _tests/data/*

[options.packages.find]
exclude = tests
