[bdist_wheel]
universal = 1

[flake8]
exclude =
    .eggs
    .git
    .tox
    .venv
    build
# E203 is whitespace before ':'; we follow black's formatting here. See https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
# E501 is line length, managed by black
# W503 is line breaks before binary operators, which has been reversed in PEP 8.
ignore = E203,E501,E741,SFS3,W503

[metadata]
author = Enis Afgan
author_email = afgane@gmail.com
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Scientific/Engineering :: Bio-Informatics
description = Galaxy and CloudMan API library
license = MIT
license_files =
    CITATION
    LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Nicola Soranzo
maintainer_email = nicola.soranzo@earlham.ac.uk
name = bioblend
project_urls =
    Bug Tracker = https://github.com/galaxyproject/bioblend/issues
    Documentation = https://bioblend.readthedocs.io/
    Source Code = https://github.com/galaxyproject/bioblend
url = https://bioblend.readthedocs.io/
version = attr: bioblend.__version__

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
pretty = True
show_error_codes = True
[mypy-bioblend._tests.TestCloudmanMock]
check_untyped_defs = False
[mypy-bioblend._tests.TestGalaxyObjects]
check_untyped_defs = False
[mypy-bioblend.cloudman.launch]
check_untyped_defs = False
[mypy-bioblend.galaxy.objects.*]
check_untyped_defs = False

[options]
install_requires =
    boto>=2.9.7
    pyyaml
    requests>=2.20.0
    requests-toolbelt>=0.5.1,!=0.9.0
    tuspy
    typing-extensions
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    bioblend-galaxy-tests = bioblend._tests.pytest_galaxy_test_wrapper:main [testing]

[options.extras_require]
testing =
    pytest

[options.package_data]
bioblend = _tests/data/*

[options.packages.find]
exclude = tests
